--- a/.github/workflows/pdf.yml
+++ b/.github/workflows/pdf.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v2
       - name: Build PDF
-        uses: dante-ev/latex-action@master
+        uses: xu-cheng/latex-action@v2
         with:
           root_file: main.tex
       - name: Create release
