--- a/.github/workflows/pdf.yml
+++ b/.github/workflows/pdf.yml
@@ -19,21 +19,13 @@ jobs:
         uses: xu-cheng/latex-action@v2
         with:
           root_file: main.tex
+          post_compile: "cp main.pdf recipe_cards.pdf"
       - name: Create release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: "marvinpinto/action-automatic-releases@latest"
         with:
-          tag_name: latest
-          release_name: Latest PDF
-      - name: Upload PDF to release
-        id: upload-release-asset 
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./main.pdf
-          asset_name: recipe_cards.pdf
-          asset_content_type: application/pdf
+          repo_token: "${{ secrets.GITHUB_TOKEN }}"
+          automatic_release_tag: "latest"
+          prerelease: true
+          title: "Latest PDF"
+          files: |
+            recipe_cards.pdf
