--- a/.github/workflows/pdf.yml
+++ b/.github/workflows/pdf.yml
@@ -29,3 +29,14 @@ jobs:
           title: "Latest PDF"
           files: |
             recipe_cards.pdf
+      - name: Push to pages
+        uses: dmnemec/copy_file_to_another_repo_action@main
+        env:
+          API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
+        with:
+          source_file: 'recipe_cards.pdf'
+          destination_repo: 'OlliSaarikivi/OlliSaarikivi.github.io'
+          destination_folder: 'files'
+          user_email: 'olli.saarikivi@iki.fi'
+          user_name: 'Olli Saarikivi'
+          commit_message: 'Update recipe cards PDF to latest release'
