--- a/.github/workflows/pdf.yml
+++ b/.github/workflows/pdf.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
+      - name: Install dependencies
+        run: sudo apt-get update && sudo apt-get install -y poppler-utils
       - name: Build PDF
         uses: xu-cheng/latex-action@v2
         with:
