--- a/.github/workflows/pdf.yml
+++ b/.github/workflows/pdf.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v2
       - name: Install dependencies
-        run: sudo apt-get update && sudo apt-get install -y poppler-utils
+        run: sudo apt-get update && sudo apt-get install -y poppler-utils tree
       - name: Build PDF
         uses: xu-cheng/latex-action@v2
         with:
