--- a/.github/workflows/pdf.yml
+++ b/.github/workflows/pdf.yml
@@ -16,11 +16,13 @@ jobs:
 
       - name: Install dependencies
         run: |
+          sudo ln -sf /bin/true /usr/bin/mandb
           sudo apt-get update
           sudo apt-get install -y \
             texlive-latex-recommended \
             texlive-latex-extra \
             texlive-fonts-recommended \
+            texlive-fonts-extra \
             latexmk \
             poppler-utils \
             tree
