--- a/.github/workflows/pdf.yml
+++ b/.github/workflows/pdf.yml
@@ -17,6 +17,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo ln -sf /bin/true /usr/bin/mandb
+          sudo apt-get clean
           sudo apt-get update
           sudo apt-get install -y \
             texlive-latex-recommended \
