--- a/.github/workflows/pdf.yml
+++ b/.github/workflows/pdf.yml
@@ -23,6 +23,7 @@ jobs:
             texlive \
             texlive-latex-extra \
             texlive-fonts-extra \
+            texlive-science \
             latexmk \
             poppler-utils \
             tree
