--- a/.github/workflows/pdf.yml
+++ b/.github/workflows/pdf.yml
@@ -17,9 +17,8 @@ jobs:
       - name: Install dependencies
         run: |
           sudo ln -sf /bin/true /usr/bin/mandb
-          sudo apt-get clean
           sudo apt-get update
-          sudo apt-get install -y --no-install-recommends \
+          sudo apt-get install -y \
             texlive \
             texlive-latex-extra \
             texlive-fonts-extra \
