--- a/.github/workflows/pdf.yml
+++ b/.github/workflows/pdf.yml
@@ -66,7 +66,8 @@ jobs:
 
           # Copy new files into the repo
           cp -v recipe_cards.pdf outrepo/
-          cp -vr card/* outrepo/card/ || true  # in case card/ is empty
+          mkdir -p outrepo/card
+          cp -v card/*.jpg outrepo/card/
 
           # Go to the repo directory
           cd outrepo
