--- a/.github/workflows/pdf.yml
+++ b/.github/workflows/pdf.yml
@@ -25,7 +25,8 @@ jobs:
             texlive-science \
             latexmk \
             poppler-utils \
-            tree
+            tree \
+            pdf2svg
 
       - name: Build PDF with latexmk
         run: latexmk
