--- a/.github/workflows/pdf.yml
+++ b/.github/workflows/pdf.yml
@@ -26,7 +26,9 @@ jobs:
             latexmk \
             poppler-utils \
             tree \
-            pdf2svg
+            pdf2svg \
+            fontconfig \
+            fonts-dejavu-core
 
       - name: Build PDF with latexmk
         run: latexmk
